[package]
name = "beam_dump_parser"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
markdown = { git = "https://github.com/lionkor/better-markdown-rs.git" }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
warp = "0.4.2"
