[package]
name = "docgen_server"
version = "0.1.0"
edition = "2024"

[dependencies]
parser = { path = "parser" }

tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
axum = "0.8.9"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs"] }

markdown = { git = "https://github.com/lionkor/better-markdown-rs.git" }
